--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="row">
+            <div class="sidebar col-4">
+                
+            </div>
+
+            <div class="main_app col-8">
+
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
