add side nav in sidebar

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="sidebar col-4">
-                
+            <div class="sidebar row col-4">
+                <div class="side_nav col-12">
+                    
+                </div>
+
             </div>
 
             <div class="main_app col-8">
