--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="sidebar row col-4">
+            <div class="sidebar col-4">
+
                 <div class="side_nav col-12">
                     
+                </div>
+                <div class="notification col-12">
+
+                </div>
+                <div class="searchbar col-12">
+
                 </div>
 
             </div>
