add contact list

--- a/index.html
+++ b/index.html
@@ -9,17 +9,37 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="sidebar col-4">
 
+            <div class="sidebar col-4">
+                <!-- side_nav -->
                 <div class="side_nav col-12">
                     
                 </div>
+                <!-- notifications -->
                 <div class="notification col-12">
 
                 </div>
+                <!-- searchbar -->
                 <div class="searchbar col-12">
 
                 </div>
+                <!-- contact_list -->
+                <div class="contact_list">
+                    <div class="contact">
+
+                    </div>
+                    <div class="contact">
+
+                    </div>
+                    <div class="contact">
+
+                    </div>
+                    <div class="contact">
+
+                    </div>
+
+                </div>
+
 
             </div>
 
