fixed contact list height and overflow

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class=" app_page row">
 
             <div class="sidebar col-4">
                 <!-- side_nav -->
@@ -25,6 +25,18 @@
                 </div>
                 <!-- contact_list -->
                 <div class="contact_list">
+                    <div class="contact">
+
+                    </div>
+                    <div class="contact">
+
+                    </div>
+                    <div class="contact">
+
+                    </div>
+                    <div class="contact">
+
+                    </div>
                     <div class="contact">
 
                     </div>
