add main nav, chat and main bottom inside main app

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
 
             <div class="main_app col-8">
 
+                <div class="main_nav">
+
+                </div>
+
+                <div class="chat">
+
+                </div>
+
+                <div class="main_bottom">
+                    
+                </div>
             </div>
         </div>
 
