--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolzapp</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="container">
         <div class=" app_page row">
 
             <div class="sidebar col-4">
                 <!-- side_nav -->
-                <div class="side_nav col-12">
-                    
+                <div class="side_nav d-flex col-12">
+                    <div class="right_nav">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_io.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="left_nav d-flex">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+
                 </div>
                 <!-- notifications -->
                 <div class="notification col-12">
@@ -66,11 +82,12 @@
                 </div>
 
                 <div class="main_bottom">
-                    
+
                 </div>
             </div>
         </div>
 
     </div>
 </body>
+
 </html>
