add icon and text inside notifications

--- a/index.html
+++ b/index.html
@@ -32,8 +32,19 @@
 
                 </div>
                 <!-- notifications -->
-                <div class="notification col-12">
+                <div class="notification d-flex col-12">
+                    <div class="icon">
+                        <i class="fa-solid fa-bell-slash"></i>
+                    </div>
+                    <div class="text d-flex">
+                        <span>
+                            <strong>
+                                Ricevi notifiche di nuovi messaggi
+                            </strong>
+                        </span>
 
+                        <a href="#">Attiva notifiche desktop</a>
+                    </div>
                 </div>
                 <!-- searchbar -->
                 <div class="searchbar col-12">
