add icon and input search inside searchbar

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                 </div>
                 <!-- searchbar -->
                 <div class="searchbar col-12">
-
+                    <div class="search d-flex">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" placeholder="Cerca o inizia una nuova chat">
+                    </div>
                 </div>
                 <!-- contact_list -->
                 <div class="contact_list">
