--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <div class="sidebar col-4">
                 <!-- side_nav -->
                 <div class="side_nav d-flex col-12">
-                    <div class="right_nav">
+                    <div class="left_nav">
                         <div class="user_img">
                             <img src="./assets/img/avatar_io.jpg" alt="">
                         </div>
                     </div>
 
-                    <div class="left_nav d-flex">
+                    <div class="right_nav d-flex">
                         <i class="fa-solid fa-circle-notch"></i>
                         <i class="fa-solid fa-message"></i>
                         <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -55,30 +55,110 @@
                 </div>
                 <!-- contact_list -->
                 <div class="contact_list">
-                    <div class="contact">
-
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Michele</strong></span>
+                                <span>16.15</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                    <div class="contact">
 
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_2.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Fabio</strong></span>
+                                <span>16.05</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                    <div class="contact">
 
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_3.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Samuele</strong></span>
+                                <span>16.03</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                    <div class="contact">
 
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_4.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Alessandro B.</strong></span>
+                                <span>15.50</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                    <div class="contact">
 
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_5.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Alessandro L.</strong></span>
+                                <span>15.45</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                    <div class="contact">
 
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_6.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Sara</strong></span>
+                                <span>15.23</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                    <div class="contact">
 
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_7.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Federico</strong></span>
+                                <span>12.15</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                    <div class="contact">
 
+                    <div class="contact d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_8.jpg" alt="">
+                        </div>
+                        <div class="text d-flex">
+                            <div class="user_name d-flex">
+                                <span><strong>Matteo</strong></span>
+                                <span>10.32</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
+                  
 
                 </div>
 
