add image, text and icons inside main nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <div class="sidebar col-4">
                 <!-- side_nav -->
-                <div class="side_nav d-flex col-12">
+                <div class="side_nav d-flex ">
                     <div class="left_nav">
                         <div class="user_img">
                             <img src="./assets/img/avatar_io.jpg" alt="">
@@ -158,7 +158,7 @@
                             <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </div>
-                  
+
 
                 </div>
 
@@ -167,7 +167,23 @@
 
             <div class="main_app col-8">
 
-                <div class="main_nav">
+                <div class="main_nav d-flex">
+
+                    <div class="left_nav d-flex">
+                        <div class="user_img">
+                            <img src="./assets/img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="main_contact d-flex">
+                            <span><strong>Michele</strong></span>
+                            <span>Ultimo accesso oggi alle 16:26</span>
+                        </div>
+                    </div>
+
+                    <div class="right_nav d-flex">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-paperclip"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
 
                 </div>
 
