add two message box inside chat

--- a/index.html
+++ b/index.html
@@ -187,8 +187,39 @@
 
                 </div>
 
-                <div class="chat">
+                <div class="chat d-flex">
 
+                    <div class="sent d-flex col-7">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga hic sed facilis magnam
+                            repellat nam accusamus esse quia sequi totam, beatae repellendus perspiciatis. Recusandae,
+                            impedit quos ipsa voluptatum assumenda odio nostrum ut dolore eveniet facilis aspernatur
+                            beatae aliquid ab. Quisquam quia alias fuga vero ducimus cum sit neque a.
+                        </p>
+
+                        <div class="info_icon">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                        <div class="msg_time">
+                            <span>16:13</span>
+                        </div>
+                    </div>
+
+                    <div class="received d-flex col-7">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga hic sed facilis magnam
+                            repellat nam accusamus esse quia sequi totam, beatae repellendus perspiciatis. Recusandae,
+                            impedit quos ipsa voluptatum assumenda odio nostrum ut dolore eveniet facilis aspernatur
+                            beatae aliquid ab. Quisquam quia alias fuga vero ducimus cum sit neque a.
+                        </p>
+
+                        <div class="info_icon">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                        <div class="msg_time">
+                            <span>16:15</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="main_bottom">
