--- a/index.html
+++ b/index.html
@@ -222,8 +222,18 @@
                     </div>
                 </div>
 
-                <div class="main_bottom">
+                <div class="main_bottom d-flex">
+                    <div class="emojis">
+                        <i class="fa-regular fa-face-smile col-1"></i>
+                    </div>
 
+                    <div class="input_msg">
+                        <input type="text" class="" placeholder="Scrivi un messaggio">
+                    </div>
+
+                    <div class="audio">
+                        <i class="fa-solid fa-microphone col-1"></i>
+                    </div>
                 </div>
             </div>
         </div>
