add responsive rules to max width 991px

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </div>
                     </div>
 
-                    <div class="right_nav d-flex">
+                    <div class="right_nav hide d-flex">
                         <i class="fa-solid fa-circle-notch"></i>
                         <i class="fa-solid fa-message"></i>
                         <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -59,7 +59,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_1.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Michele</strong></span>
                                 <span>16.15</span>
@@ -72,7 +72,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_2.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Fabio</strong></span>
                                 <span>16.05</span>
@@ -85,7 +85,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_3.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Samuele</strong></span>
                                 <span>16.03</span>
@@ -98,7 +98,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_4.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Alessandro B.</strong></span>
                                 <span>15.50</span>
@@ -111,7 +111,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_5.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Alessandro L.</strong></span>
                                 <span>15.45</span>
@@ -124,7 +124,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_6.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Sara</strong></span>
                                 <span>15.23</span>
@@ -137,7 +137,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_7.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Federico</strong></span>
                                 <span>12.15</span>
@@ -150,7 +150,7 @@
                         <div class="user_img">
                             <img src="./assets/img/avatar_8.jpg" alt="">
                         </div>
-                        <div class="text d-flex">
+                        <div class="text hide d-flex">
                             <div class="user_name d-flex">
                                 <span><strong>Matteo</strong></span>
                                 <span>10.32</span>
