--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
 
                         <div class="info_icon">
                             <i class="fa-solid fa-chevron-down"></i>
+                            <div class="drop_info">
+                                <ul>
+                                    <li>Info messaggio</li>
+                                    <li>Cancella messaggio</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="msg_time">
                             <span>16:13</span>
@@ -215,6 +221,12 @@
 
                         <div class="info_icon">
                             <i class="fa-solid fa-chevron-down"></i>
+                            <div class="drop_info">
+                                <ul>
+                                    <li>Info messaggio</li>
+                                    <li>Cancella messaggio</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="msg_time">
                             <span>16:15</span>
